# planner-shell

./: .env.example  .gitignore  CONTAINER_GUIDE.md  LICENSE  README.md  SANDBOX.md  common_types.py  main.py  pyproject.toml  setup.sh
agents/: __init__.py  auditor.py  executor.py  planner.py
cache/: __init__.py  base.py  singlestore.py  sqlite.py
config/: config.py  dangerous_patterns.txt
llm/: __init__.py  setup.py
prompts/: distill.md  executor.md  planner.md
scratch/: verify_normalization.py
shell/: __init__.py  persistent.py  sandbox.py  shell_wrapper.py  tool.py
test/: cache_test_utils.py  conftest.py  debug_all_entries.py  debug_duplicates.py  debug_list_plans.py  run_all_tests.py  run_tests.py  test_alpine_detection.py  test_auditor.py  test_auditor_file.py  test_auditor_simple.py  test_auto_approve.py  test_auto_approve_loop.py  test_cache_backends.py  test_cache_basic.py  test_cache_clear_and_stats.py  test_cache_delete.py  test_cache_hybrid_search.py  test_cache_regen.py  test_cache_ttl.py  test_commands.py  test_comprehensive.py  test_config.py  test_container_output.py  test_docker_os_info.py  test_executor_integration.py  test_fts5_corruption.py  test_fts5_corruption_detailed.py  test_fts5_integration.py  test_hash_consistency.py  test_integration.py  test_interactive_error.py  test_list_edit_delete_shortcuts.py  test_main_workflow.py  test_markdown_mode.py  test_mid_process_auto_approve.py  test_newgrp_warning.py  test_output_display.py  test_output_host.py  test_planner_integration.py  (+10 more)
utils/: __init__.py  io.py  os_info.py  security.py  (+3 more)
(+1 files in other folders)
