[project]
name = "planner-shell"
version = "0.1.0"
description = "Practical AI DevOps Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.10",
    "langchain-tavily>=0.0.2",
    "tavily-python>=0.3.0",
    "prompt_toolkit>=3.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "singlestoredb>=1.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
planner-shell = "main:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "cache", "llm", "shell", "utils"]
include = ["main.py", "common_types.py", "config.py", "README.md", ".env.example"]
